Fixed some spacings

--- a/styles/main.css
+++ b/styles/main.css
@@ -71,11 +71,13 @@ a:hover {
     padding: 10px;
 }
 .item img {
-    width: 210px;
+    width: 220px;
     max-height: 120px;
     border-radius: 4px;
     transition: transform .8s;
     overflow: hidden;
+    object-position: top;
+    object-fit: cover;
 }
 .scrnshot {
     flex: 1 0 15%;
@@ -107,7 +109,7 @@ figcaption {
     font: italic smaller sans-serif;
     padding: 4px;
     text-align: center;
-    max-width: 200px;
+    max-width: 220px;
     text-transform: lowercase;
 }
 footer {
